<resources>
    <string name="app_name">MyApplication</string>
    <string name="title">Bangladesh v England: second one-day international – live</string>
    <string name="type">Type</string>
    <string name="name">Author Name</string>
    <string name="no_internet_available">No internet available.</string>
    <string name="firstname">sayed</string>

    <string name="news_section">sport</string>
    <string name="news_type">liveblog</string>

    <string name="date">Date</string>

    <string name="news_date">2016-10-09T11:18:14Z</string>

    <string name="no_news">No news found.</string>

</resources>
